<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="errorMessage"
            type="String" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_network"
        android:elevation="@dimen/size_10dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/ic_network_error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.Airvet.TextView.Heading"
                android:layout_gravity="start"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/no_internet"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.Airvet.TextView.Heading"
                android:layout_gravity="start"
                android:text="@string/connection"
                android:textColor="@color/primary_700"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.Airvet.TextView.Body"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/size_10dp"
                android:gravity="center_vertical"
                android:text="@string/connection_error" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/try_again_btn"
                style="@style/Widget.Airvet.TextView.Button"
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/try_again" />

        </LinearLayout>

    </RelativeLayout>

</layout>