<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.recyclerview.widget.RecyclerView" />

        <variable
            name="adapter"
            type="com.app.airvet.ui.adapter.PostAdapter" />

        <variable
            name="vm"
            type="com.app.airvet.ui.MainVM" />

        <variable
            name="errorMessage"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.Airvet.TextView.Heading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:text="@string/random_users" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                android:background="@color/transparent"
                app:tabBackground="@drawable/selector_tab"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp"
                app:tabPaddingEnd="5dp"
                app:tabPaddingStart="5dp"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/Widget.Airvet.TextView.TabTextAppearance.Genre"
                app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/component_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_post" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateOnly="true"
                    android:visibility="@{vm.isLoading()}"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/error_layout"
                    layout="@layout/layout_network_error"
                    app:errorMessage="@{errorMessage}" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
