<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.recyclerview.widget.RecyclerView" />

        <import type="android.view.View" />

        <variable
            name="user"
            type="com.app.airvet.model.UserModel" />

        <variable
            name="vm"
            type="com.app.airvet.ui.MainVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8EAF6"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/size_20dp">

                    <ImageView
                        android:id="@+id/image_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_size"
                        android:background="@color/grey"
                        android:scaleType="centerCrop"
                        bind:imageUrl="@{user.picture.large}" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/details_cardview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/details_card_height"
                        android:layout_below="@+id/image_header"
                        android:layout_marginHorizontal="@dimen/details_card_margin_horizontal"
                        android:layout_marginTop="-40dp"
                        app:cardCornerRadius="@dimen/card_corner_radius"
                        app:contentPadding="@dimen/size_10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Heading"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical"
                                android:text="@{user.name.title+` `+user.name.first+` `+user.name.last}" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body"
                                android:layout_marginTop="@dimen/size_20dp"
                                android:text="@string/gender" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Content"
                                android:letterSpacing="0.2"
                                android:text="@{user.gender}"
                                android:textAllCaps="true" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body"
                                android:layout_marginTop="@dimen/size_20dp"
                                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                                android:text="@string/location" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Content.Grey"
                                android:letterSpacing="0.2"
                                android:text="@{user.location.street.number+` `+user.location.street.name}" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Content.Grey"
                                android:text="@{user.location.city+` `+user.location.state+` `+user.location.country}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_cardview"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/details_card_margin_horizontal"
                        android:paddingVertical="@dimen/details_card_margin_horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body.Grey"
                                android:layout_width="wrap_content"
                                android:drawableLeft="@drawable/ic_email"

                                android:drawablePadding="@dimen/size_10dp"
                                android:text="@string/email"
                                android:textAllCaps="true" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@{user.email}" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_20dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body.Grey"
                                android:layout_width="wrap_content"
                                android:drawableLeft="@drawable/ic_baseline_call_24"
                                android:drawablePadding="@dimen/size_10dp"
                                android:text="@string/contact"
                                android:textAllCaps="true" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@{user.phone}"
                                android:textAllCaps="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_20dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body.Grey"
                                android:layout_width="wrap_content"
                                android:drawableLeft="@drawable/ic_baseline_deck_24"
                                android:drawablePadding="@dimen/size_10dp"
                                android:text="@string/nationality"

                                android:textAllCaps="true" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Widget.Airvet.TextView.Body"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@{user.location.country+`(`+user.nat+`)`}"
                                android:textAllCaps="true" />
                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:id="@+id/icon_back"
            android:layout_margin="@dimen/size_10dp"
            android:background="@drawable/button_bg_grey_tab"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
